crates/ruff_python_formatter/tests/snapshots/format@range_formatting__decorators.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/range_formatting/decorators.py
---
## Input
```python
def  test():

    print("before" )

    @<RANGE_START> decorator( aa)
    <RANGE_END>def  func ():
        pass


<RANGE_START>@ decorator(  a)
def  test(   a):<RANGE_END>
    print(  "body")

print("after" )

```

## Output
```python
def  test():

    print("before" )

    @decorator(aa)
    def  func ():
        pass


@decorator(a)
def test(a):
    print(  "body")

print("after" )

```



