crates/ruff_python_formatter/tests/snapshots/format@range_formatting__empty_file.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
<RANGE_START><RANGE_END>```

## Output
```python
```
