crates/ruff_python_formatter/tests/snapshots/format@range_formatting__empty_range.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def  test():
    <RANGE_START><RANGE_END>print( "test" )
```

## Output
```python
def  test():
    print( "test" )
```
