crates/ruff_python_formatter/tests/snapshots/format@range_formatting__end_of_file.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
a + b<RANGE_START><RANGE_END>```

## Output
```python
a + b```
