crates/ruff_python_formatter/tests/snapshots/format@range_formatting__module.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
print("Before range start" )

<RANGE_START>
if a   + b :
    print("formatted"  )

print("still in range"  )
<RANGE_END>

print("After range end"  )
```

## Output
```python
print("Before range start" )


if a + b:
    print("formatted")

print("still in range")


print("After range end"  )
```
