crates/ruff_python_formatter/tests/snapshots/format@range_formatting__range_narrowing.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python
def test ():
    <RANGE_START>if True:
        print(  "format")
    elif False:
        print (   "and this")<RANGE_END>
        print("not this"   )

    print("nor this" )
```

## Output
```python
def test ():
    if True:
        print("format")
    elif False:
        print("and this")
        print("not this"   )

    print("nor this" )
```
