crates/ruff_python_formatter/tests/snapshots/format@range_formatting__same_line_body.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/range_formatting/same_line_body.py
---
## Input
```python
def  test(<RANGE_START>a ): <RANGE_END>print("body" )


def  test2(  a):    <RANGE_START>print("body"  )<RANGE_END>


def  test3(  a):    <RANGE_START>print("body"  )

print("more"   )<RANGE_END>
print("after"  )
```

## Output
```python
def test(a): print("body" )


def test2(a):
    print("body")


def test3(a):
    print("body")


print("more")
print("after"  )
```



